--- a/webapp/lazy.html
+++ b/webapp/lazy.html
@@ -25,7 +25,7 @@
       var recognizer, recorder, callbackManager, audioContext, outputContainer;
       // Only when both recorder and recognizer do we have a ready application
       var isRecorderReady = isRecognizerReady = false;
-
+      console.log('Line 28');
       // A convenience function to post a message to the recognizer and associate
       // a callback to its response
       function postRecognizerJob(message, callback) {
