--- a/webapp/lazy.html
+++ b/webapp/lazy.html
@@ -142,7 +142,7 @@
       // This initializes the recognizer. When it calls back, we add words
       var initRecognizer = function() {
           // You can pass parameters to the recognizer, such as : {command: 'initialize', data: [["-hmm", "my_model"], ["-fwdflat", "no"]]}
-          postRecognizerJob({command: 'initialize', data: [["-hmm", "hub4-8gau"], ["-fwdflat", "no"]]},
+          postRecognizerJob({command: 'initialize', data: [["-hmm", "cmusphinx-en-us-ptm-5.2"], ["-fwdflat", "no"]]},
                             function() {
                                         if (recorder) recorder.consumers = [recognizer];
                                         feedWords(wordList);});
